syntax = "proto3";

package risk.v1;

option go_package = "github.com/AfshinJalili/goex/services/risk/proto/risk/v1;riskpb";

service Risk {
  rpc PreTradeCheck(PreTradeCheckRequest) returns (PreTradeCheckResponse);
}

message PreTradeCheckRequest {
  string account_id = 1;
  string symbol = 2;
  string side = 3;
  string order_type = 4;
  string quantity = 5;
  string price = 6;
}

message PreTradeCheckResponse {
  bool allowed = 1;
  repeated string reasons = 2;
  map<string, string> details = 3;
}
